@@ -44,6 +44,7 @@
 - API Fix: Move vertex array index buffer limit to backends to fix issue with numIndices parameter
 - API Fix: TexturePacker: Fix wrong Y value when using padding
 - API Fix: Lwjgl3Net: Add fallback to xdg-open on Linux if Desktop.BROWSE is unavailable
+- API Addition: Add NWSEResize, NESWResize, AllResize, and NotAllowed SystemCursors
 
 [1.10.0]
 - [BREAKING CHANGE] Android armeabi support has been removed. To migrate your projects: remove any dependency with natives-armeabi qualifier from your gradle build file, this apply to gdx-platform, gdx-bullet-platform, gdx-freetype-platform and gdx-box2d-platform.
